# Clanger

./: .gitignore  README.md
ClangParser/: CMakeCache - Copy.txt  CMakeLists.txt  PreLoad.cmake  bash.exe.stackdump  main.cpp  old-results.txt  older-results.txt  results.txt
ClangParser/Containers/: CMakeLists.txt
ClangParser/Containers/Entities/Class/: Class.cpp  Class.hpp
ClangParser/Containers/Entities/CodeElement/: CodeElement.cpp  CodeElement.hpp
ClangParser/Containers/Entities/CodeFile/: CodeFile.cpp  CodeFile.hpp
ClangParser/Containers/Entities/CodeStage/: CodeStage.cpp  CodeStage.hpp
ClangParser/Containers/Entities/CodeTrace/: CodeTrace.cpp  CodeTrace.hpp
ClangParser/Containers/Entities/Function/: Function.cpp  Function.hpp
ClangParser/Containers/Entities/TGraph/: TGraph.cpp  TGraph.hpp
ClangParser/Containers/Entities/Variable/: Variable.cpp  Variable.hpp
ClangParser/Containers/Entities/Violation/: Violation.cpp  Violation.hpp
ClangParser/Containers/Statements/CompoundStatements/CompoundSt/: CompoundSt.cpp  CompoundSt.hpp
ClangParser/Containers/Statements/CompoundStatements/IncludeSt/: IncludeSt.cpp  IncludeSt.hpp
ClangParser/Containers/Statements/DeclarationStatements/DeclSt/: DeclSt.cpp  DeclSt.hpp
ClangParser/Containers/Statements/ExpressionStatements/BinaryOperatorSt/: BinaryOperatorSt.cpp  BinaryOperatorSt.hpp
ClangParser/Containers/Statements/ExpressionStatements/CallExprSt/: CallExprSt.cpp  CallExprSt.hpp
ClangParser/Containers/Statements/ExpressionStatements/DeclRefExprSt/: DeclRefExprSt.cpp  DeclRefExprSt.hpp
ClangParser/Containers/Statements/ExpressionStatements/ImplicitCastExprSt/: ImplicitCastExprSt.cpp  ImplicitCastExprSt.hpp
ClangParser/Containers/Statements/ExpressionStatements/OpaqueValueExprSt/: OpaqueValueExprSt.cpp  OpaqueValueExprSt.hpp
ClangParser/Containers/Statements/IterationStatements/DoSt/: DoSt.cpp  DoSt.hpp
ClangParser/Containers/Statements/IterationStatements/ForSt/: ForSt.cpp  ForSt.hpp
ClangParser/Containers/Statements/IterationStatements/WhileSt/: WhileSt.cpp  WhileSt.hpp
ClangParser/Containers/Statements/JumpStatements/BreakSt/: BreakSt.cpp  BreakSt.hpp
ClangParser/Containers/Statements/JumpStatements/ReturnSt/: ReturnSt.cpp  ReturnSt.hpp
ClangParser/Containers/Statements/SelectionStatements/IfSt/: IfSt.cpp  IfSt.hpp
ClangParser/Containers/Statements/SelectionStatements/SwitchSt/: SwitchSt.cpp  SwitchSt.hpp
ClangParser/Containers/Statements/Statement/: Statement.cpp  Statement.hpp
ClangParser/Handlers/: CMakeLists.txt
ClangParser/Handlers/ClassDeclHandler/: ClassDeclHandler.cpp  ClassDeclHandler.hpp
ClangParser/Handlers/FunctionDeclHandler/: FunctionDeclHandler.cpp  FunctionDeclHandler.hpp
ClangParser/Handlers/IncludeHandler/: IncludeHandler.cpp  IncludeHandler.hpp
ClangParser/Handlers/StatementHandler/: StatementHandler.cpp  StatementHandler.hpp
ClangParser/Handlers/VarDeclHandler/: VarDeclHandler.cpp  VarDeclHandler.hpp
ClangParser/Libraries/: CMakeLists.txt
ClangParser/Libraries/JsonUtility/: JsonUtility.cpp  JsonUtility.hpp
ClangParser/Libraries/StringUtility/: StringUtility.cpp  StringUtility.hpp
ClangParser/Services/: CMakeLists.txt
ClangParser/Services/Tracer/: Tracer.cpp  Tracer.hpp
CodeVisualizer/: Main.html  Trace_AppMain.trc
CodeVisualizer/plugins/DiagramDrawer/: DiagramConfig.js  DiagramDrawer.js  JsonReader.js  mxClient.js
CodeVisualizer/plugins/bootstrap-slider/: slider.css
